gobmkida/c3/purge_persistent_owl_cache
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/purge_persistent_owl_cache/src/engine/persistent.c:1120:6: error: use of undeclared identifier 'purge_persistent_owl_cache_last_purge_position_number'
if ( purge_persistent_owl_cache_last_purge_position_number != position_number ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/purge_persistent_owl_cache/src/engine/persistent.c:1122:1: error: use of undeclared identifier 'purge_persistent_owl_cache_last_purge_position_number'
purge_persistent_owl_cache_last_purge_position_number = position_number; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/purge_persistent_owl_cache/src/engine/persistent.c:1136:71: error: use of undeclared identifier 'owl_cache'
memcpy( &persistent_owl_cache[v1], &persistent_owl_cache[v0], sizeof( owl_cache)); 
                                                                      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/purge_persistent_owl_cache/src/engine/persistent.c:1143:24: error: use of undeclared identifier 'byte_9C689C'
v4 = ( unsigned __int8)byte_9C689C[i]; 
                       ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/purge_persistent_owl_cache/src/obj/1/persistent.o] Error 1
